# Leticia-Encarnacion-IA

./: 5348799.eps  5348801.ai  README.md  main.py  pyproject.toml  script.ps1
ai/: __init__.py  astar.py  nodo.py
assets/sound/effects/: ataque_enemigo.m4a
entities/: __init__.py  bomb.py  enemy.py  explosion.py  player.py
map/: __init__.py  map.py  tile.py
scenes/: __init__.py  creditos.py  game.py  menu_scene.py  pause_scene.py
src/: astar.py  bomb.py  config.py  constants.py  enemy.py  game.py  main.py  map.py  menu_scene.py  nodo.py  player.py  tile.py
src/scenes/: menu_scene.py
src/utils/: __init__.py  constants.py
utils/: __init__.py  assets.py  constants.py  strings.py
